# vcf_mcp_server

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  EMBEDDED_DOCS.md  FILTER_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STREAMING.md  STREAMING_EXAMPLES.md  STREAMING_FILTER_EXAMPLES.md  TESTING_NOTES.md  clean_test_indices.sh  test_all_debug_logging.sh  test_debug_logging.sh  test_stats_limit.sh  test_streaming_timing.sh  test_timing_demo.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: vcf_queries.rs
examples/: test_region.rs  test_stats_limit.rs
sample_data/: ARABIDOPSIS_EXAMPLE.md  README.md  download_arabidopsis_sample.sh  sample.compressed.vcf.gz.csi
src/: main.rs  vcf.rs
tests/: error_handling_tests.rs  quick_filter_test.sh  simple_stats_test.sh  test_filter_errors.sh  test_mcp_tools.sh  test_output.sh  test_queries.md  test_server.sh  test_statistics.sh  test_stats_max_chromosomes.sh  test_streaming.sh  vcf_integration.rs
