[package]
name = "vcf_mcp_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
noodles = { version = "0.101.0", features = ["bgzf", "core", "tabix", "vcf"] }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
anyhow = "1"
