[package]
name = "vcf_mcp_server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
noodles = { version = "0.104.0", features = [
  "bgzf",
  "core",
  "csi",
  "tabix",
  "vcf",
] }
rmcp = { version = "0.13.0", features = [
  "server",
  "transport-io",
  "transport-streamable-http-server",
] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3.3"
clap = { version = "4.5.54", features = ["derive"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.19", features = [
  "tokio",
  "server",
  "server-auto",
] }
axum = "0.8.8"
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }
vcf-filter = { git = "https://github.com/moozoo64/vcf-filter" }

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.15"

[[bench]]
name = "vcf_queries"
harness = false
